--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -3,12 +3,18 @@
  * and scoped locally.
  */
 
+.mainWrapper_node_modules-\@docusaurus-theme-classic-lib-theme-Layout-styles-module {
+  display: flex;
+  flex-direction: column;
+}
+
 .heroBanner {
-  padding: 2.4rem 0;
+  padding: 3rem 0;
   text-align: center;
   position: relative;
   overflow: hidden;
   background-image: linear-gradient(135deg, #1abc9c 0%, #8e44ad 100%);
+  flex: 1;
 
   .container {
     display: flex;
@@ -40,29 +46,33 @@
 
 .hero__content {
   width: 100%;
-  max-width: 23rem;
   padding: 1rem 2.5rem;
   box-sizing: border-box;
   text-align: center;
 
   h1 {
     font-size: 1.5rem;
-    margin: 0.6rem 0 0 0;
-    text-transform: uppercase;
+    margin: 0.3rem 0 0.6rem 0;
+    color: #eeeeee;
+  }
+
+  h3 {
+    font-size: 1.25rem;
+    margin-bottom: 1.2rem;
     color: #eeeeee;
     font-weight: normal;
   }
 
   p {
-    font-size: 0.72rem;
+    font-size: 0.8rem;
     font-weight: light;
     color: #333333;
     margin: 0;
   }
 
   span a {
-    font-size: 1.125rem;
-    color: #cccccc;
+    font-size: 1.5rem;
+    color: #fff;
     text-decoration: none;
     margin: 0 0.625rem;
     transition: all 0.4s ease-in-out;
