feat: home layout

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -3,7 +3,7 @@
  * and scoped locally.
  */
 
-.mainWrapper_node_modules-\@docusaurus-theme-classic-lib-theme-Layout-styles-module {
+.lacorda-homepage {
   display: flex;
   flex-direction: column;
 }
