--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -33,32 +33,6 @@
   height: 2.8rem;
 }
 
-// .footer .container {
-//   position: relative;
-//   display: flex;
-
-//   &:before {
-//     content: "";
-//     display: block;
-//     width: 156px;
-//     height: 156px;
-//     background: url('@site/static/img/logo.png') no-repeat;
-//     background-size: contain;
-//   }
-
-//   .footer__links {
-//     flex: 1;
-//     margin-left: 32px;
-//   }
-
-//   .footer__bottom {
-//     position: absolute;
-//     width: 100%;
-//     bottom: -24px;
-//   }
-// }
-
-
 // 注释特殊样式
 .code-block-error-line {
   background-color: #ff000020;
@@ -93,26 +67,28 @@
     border-bottom: 1px rgba(255, 255, 255, 0.2) solid;
   }
 
-  .navbar__brand,
-  .navbar__item {
-    color: #eee;
-  }
-
-  .navbar__link {
-
-    &--active,
-    &:hover {
-      color: #fff;
-      font-weight: bold;
-      text-shadow: 1px 1px 3px rgb(32 75 7 / 50%);
+  .navbar__inner {
+    .navbar__brand,
+    .navbar__item {
+      color: #eee;
     }
-  }
 
-  .clean-btn {
-    color: #fff;
+    .navbar__link {
 
-    &:hover {
-      background-color: rgba(235, 237, 240, 0.2);
+      &--active,
+      &:hover {
+        color: #fff;
+        font-weight: bold;
+        text-shadow: 1px 1px 3px rgb(32 75 7 / 50%);
+      }
+    }
+
+    .clean-btn {
+      color: #fff;
+
+      &:hover {
+        background-color: rgba(235, 237, 240, 0.2);
+      }
     }
   }
 }
@@ -121,5 +97,4 @@
 @media screen and (max-width: 996px) {}
 
 @import './font-awesome.min.css';
-@import './media.scss';
 @import './home.scss';
