--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -52,13 +52,12 @@
   }
 
   &:before {
-    content: "\e885";
     display: flex;
     font-size: 24px;
   }
 }
 
-.header-interview {
+.header-menu {
   display: flex;
   align-items: center;
 
@@ -67,7 +66,6 @@
   }
 
   &:before {
-    content: "\e608";
     display: flex;
     font-size: 18px;
     margin-right: 4px;
@@ -118,7 +116,7 @@
 
 // 手机视图
 @media screen and (max-width: 996px) {
-  .navbar__item.header-interview {
+  .navbar__item.header-menu {
     display: none;
   }
 }
