--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -2,9 +2,9 @@
 @font-face {
   font-family: 'iconfont';
   /* Project id 3748380 */
-  src: url('//at.alicdn.com/t/c/font_3748380_9d78ylosp6t.woff2?t=1667468730408') format('woff2'),
-    url('//at.alicdn.com/t/c/font_3748380_9d78ylosp6t.woff?t=1667468730408') format('woff'),
-    url('//at.alicdn.com/t/c/font_3748380_9d78ylosp6t.ttf?t=1667468730408') format('truetype');
+  src: url('//at.alicdn.com/t/c/font_3748380_8m2gh5ljm.woff2?t=1669187646742') format('woff2'),
+    url('//at.alicdn.com/t/c/font_3748380_8m2gh5ljm.woff?t=1669187646742') format('woff'),
+    url('//at.alicdn.com/t/c/font_3748380_8m2gh5ljm.ttf?t=1669187646742') format('truetype');
 }
 
 .iconfont {
@@ -14,4 +14,28 @@
   -webkit-font-smoothing: antialiased;
   -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-book:before {
+  content: "\e608";
+}
+
+.icon-github-fill:before {
+  content: "\e885";
+}
+
+.icon-outdent:before {
+  content: "\e7f4";
+}
+
+.icon-indent:before {
+  content: "\e7f3";
+}
+
+.icon-experiment:before {
+  content: "\e7c3";
+}
+
+.icon-earth:before {
+  content: "\e781";
 }
