feat: code theme

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -81,7 +81,11 @@
 }
 
 // 黑暗模式
-[data-theme='dark'] {}
+[data-theme='dark'] {
+  .pager-code__previewer {
+    border-color: #373739;
+  }
+}
 
 // 白天模式
 [data-theme='light'] {
