--- a/src/pages/site/_views/code/index.scss
+++ b/src/pages/site/_views/code/index.scss
@@ -19,7 +19,7 @@ $prefixCls: 'pager-code';
   &__header {
     height: 42px;
     font-size: 18px;
-    font-weight: bold;
+    // font-weight: bold;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -32,7 +32,7 @@ $prefixCls: 'pager-code';
   &__previewer {
     width: 30%;
     height: 100%;
-    border-left: 1px solid #dfdfdf;
+    border-left: 0.5px solid #dfdfdf;
     padding: 0 12px;
     font-size: 14px;
   }
