--- a/src/pages/site/_views/notFound/index.scss
+++ b/src/pages/site/_views/notFound/index.scss
@@ -2,7 +2,13 @@ $prefixCls: 'pager-notfound';
 
 .#{$prefixCls} {
   font-size: 24px;
-  padding-top: 10%;
+  padding-top: 20%;
   display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
+
+  .iconfont {
+    font-size: 64px;
+  }
 }
