feat: change code

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -1,6 +1,7 @@
 @import './font-awesome.min.css';
 @import './home.scss';
 @import './icon.scss';
+@import './antd.scss';
 
 /**
  * Any CSS included here will be global. The classic template
