--- a/src/pages/site/_views/html-css/CSS-trick_transition-from-height0toauto/index.scss
+++ b/src/pages/site/_views/html-css/CSS-trick_transition-from-height0toauto/index.scss
@@ -7,27 +7,36 @@
 
   border-bottom: 5px solid limegreen;
   cursor: pointer;
-}
 
-.accordion-title {
-  font-weight: 700;
-  font-size: 1.5rem;
-  padding: 1rem;
-}
+  &-title {
+    font-weight: 700;
+    font-size: 1.5rem;
+    padding: 1rem;
+  }
 
-.accordion-body {
-  padding-inline: 1rem;
-}
+  &-body {
+    padding-inline: 1rem;
 
-/**********************************/
+    // height: 0;
+    // max-height: 0;
 
-/***** 1) height: not working *****/
+    // transition: 250ms height ease;
+    // transition: 500ms max-height ease;
 
-.accordion-body {
-  height: 0;
-  transition: 500ms height ease;
-}
+    display: grid;
+    grid-template-rows: 0fr;
+    transition: 250ms grid-template-rows ease;
 
-.accordion:hover .accordion-body {
-  height: auto;
+    &__overflow {
+      overflow: hidden;
+    }
+  }
+
+  &:hover {
+    .accordion-body {
+      height: auto; // 1. 使用auto时，transition无效
+      // max-height: 1000px; // 2.设置一个固定值的max-height: 存在两个问题： a.内容可能溢出；b. 设置max-height越高变换越快，达不到想要的效果
+      grid-template-rows: 1fr;
+    }
+  }
 }
